--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -984,6 +984,7 @@ spec:
                                     description: Enabled indicates whether the single namespace mode is enabled or not.
                                     type: boolean
                                   name:
+                                    default: kubevirt-workload
                                     description: Name is the name of the namespace to be used, if not specified the default "kubevirt-workload" will be used.
                                     type: string
                                 type: object
