--- a/addons/kube-state-metrics/kube-state-metrics.yaml
+++ b/addons/kube-state-metrics/kube-state-metrics.yaml
@@ -55,7 +55,7 @@ spec:
     - Egress
 ---
 {{ end }}
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   labels:
