Setup generic namespace for KubeVirt namespaced mode (#13614)
* Setup generic namespace for KubeVirt namespaced mode

Signed-off-by: Karol Szwaj <karol.szwaj@gmail.com>

* update crd

Signed-off-by: Karol Szwaj <karol.szwaj@gmail.com>

* review update

Signed-off-by: Karol Szwaj <karol.szwaj@gmail.com>

* use namespace instead of name

Signed-off-by: Karol Szwaj <karol.szwaj@gmail.com>

* use namespace instead of name

Signed-off-by: Karol Szwaj <karol.szwaj@gmail.com>

---------

Signed-off-by: Karol Szwaj <karol.szwaj@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -978,8 +978,16 @@ spec:
                                   type: object
                                 type: array
                               namespacedMode:
-                                description: NamespacedMode enables the single namespace mode for all user-clusters in the KubeVirt datacenter.
-                                type: boolean
+                                description: NamespacedMode represents the configuration for enabling the single namespace mode for all user-clusters in the KubeVirt datacenter.
+                                properties:
+                                  enabled:
+                                    description: Enabled indicates whether the single namespace mode is enabled or not.
+                                    type: boolean
+                                  name:
+                                    default: kubevirt-workload
+                                    description: Namespace is the name of the namespace to be used, if not specified the default "kubevirt-workload" will be used.
+                                    type: string
+                                type: object
                             type: object
                           machineFlavorFilter:
                             description: 'Optional: MachineFlavorFilter is used to filter out allowed machine flavors based on the specified resource limits like CPU, Memory, and GPU etc.'
