--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -695,14 +695,10 @@ spec:
                                 description: 'Optional: defines if the IPv6 is enabled for the datacenter'
                                 type: boolean
                               loadBalancerMethod:
-                                description: |-
-                                  Optional: Gets mapped to the "lb-method" setting in the cloud config.
-                                  defaults to "ROUND_ROBIN".
+                                description: 'Optional: Gets mapped to the "lb-method" setting in the cloud config. defaults to "ROUND_ROBIN".'
                                 type: string
                               loadBalancerProvider:
-                                description: |-
-                                  Optional: Gets mapped to the "lb-provider" setting in the cloud config.
-                                  defaults to ""
+                                description: 'Optional: Gets mapped to the "lb-provider" setting in the cloud config. defaults to ""'
                                 type: string
                               manageSecurityGroups:
                                 description: 'Optional: Gets mapped to the "manage-security-groups" setting in the cloud config. This setting defaults to true.'
