--- a/pkg/test/e2e/opa/constraint_template.yaml
+++ b/pkg/test/e2e/opa/constraint_template.yaml
@@ -32,14 +32,17 @@ spec:
   selector:
     labelSelector: {}
   targets:
-    - rego: |
-        package k8srequiredlabels
+    - target: admission.k8s.gatekeeper.sh
+      code:
+        - engine: Rego
+          source:
+            rego: |
+              package k8srequiredlabels
 
-        violation[{"msg": msg, "details": {"missing_labels": missing}}] {
-          provided := {label | input.review.object.metadata.labels[label]}
-          required := {label | label := input.parameters.labels[_]}
-          missing := required - provided
-          count(missing) > 0
-          msg := sprintf("you must provide labels: %v", [missing])
-        }
-      target: admission.k8s.gatekeeper.sh
+              violation[{"msg": msg, "details": {"missing_labels": missing}}] {
+                provided := {label | input.review.object.metadata.labels[label]}
+                required := {label | label := input.parameters.labels[_]}
+                missing := required - provided
+                count(missing) > 0
+                msg := sprintf("you must provide labels: %v", [missing])
+              }
