--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
@@ -82,6 +82,10 @@ spec:
                 defaultValuesBlock:
                   description: DefaultValuesBlock specifies default values for the UI which are passed to helm templating when creating an application. Comments are preserved.
                   type: string
+                defaultVersion:
+                  description: DefaultVersion of the application to use, if not specified the latest available version will be used.
+                  pattern: v?([0-9]+)(\.[0-9]+)?(\.[0-9]+)?(-([0-9A-Za-z\-]+(\.[0-9A-Za-z\-]+)*))?(\+([0-9A-Za-z\-]+(\.[0-9A-Za-z\-]+)*))?
+                  type: string
                 description:
                   description: Description of the application. what is its purpose
                   type: string
