--- a/addons/csi/azure-disk/driver.yaml
+++ b/addons/csi/azure-disk/driver.yaml
@@ -27,13 +27,16 @@
 {{ $version = "v1.27.1" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.28" }}
-{{ $version = "v1.28.8" }}
+{{ $version = "v1.28.9" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.29" }}
-{{ $version = "v1.29.6" }}
+{{ $version = "v1.29.9" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.30" }}
-{{ $version = "v1.30.1" }}
+{{ $version = "v1.30.4" }}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.31" }}
+{{ $version = "v1.30.4" }}
 {{ end }}
 apiVersion: v1
 kind: ServiceAccount
