--- a/addons/csi/digitalocean/csi-driver.yaml
+++ b/addons/csi/digitalocean/csi-driver.yaml
@@ -38,7 +38,10 @@
 {{ $version = "v4.8.0" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.30" }}
-{{ $version = "v4.8.0" }}
+{{ $version = "v4.9.0" }}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.31" }}
+{{ $version = "v4.12.0" }}
 {{ end }}
 
 {{ if not (eq $version "UNSUPPORTED") }}
