--- a/addons/cluster-autoscaler/cluster-autoscaler.yaml
+++ b/addons/cluster-autoscaler/cluster-autoscaler.yaml
@@ -23,13 +23,16 @@
 {{ $version = "v1.27.8" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.28" }}
-{{ $version = "v1.28.5" }}
+{{ $version = "v1.28.6" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.29" }}
-{{ $version = "v1.29.3" }}
+{{ $version = "v1.29.4" }}
 {{ end }}
 {{ if eq .Cluster.MajorMinorVersion "1.30" }}
-{{ $version = "v1.30.1" }}
+{{ $version = "v1.30.2" }}
+{{ end }}
+{{ if eq .Cluster.MajorMinorVersion "1.31" }}
+{{ $version = "v1.31.0" }}
 {{ end }}
 
 {{ if not (eq $version "UNSUPPORTED") }}
