--- a/addons/csi/azure-disk/driver.yaml
+++ b/addons/csi/azure-disk/driver.yaml
@@ -148,6 +148,7 @@ rules:
       - list
       - watch
       - create
+      - patch
       - delete
   - apiGroups:
       - ""
@@ -531,8 +532,12 @@ spec:
             - --vmss-cache-ttl-seconds=-1
             - --enable-traffic-manager=false
             - --traffic-manager-port=7788
+            {{- if semverCompare .Cluster.Version ">= 1.29" }}
             - --enable-otel-tracing=false
+            {{- end }}
+            {{- if semverCompare .Cluster.Version ">= 1.30" }}
             - --check-disk-lun-collision=true
+            {{- end }}
           env:
             - name: AZURE_CREDENTIAL_FILE
               value: /etc/kubernetes/azure.json
@@ -774,8 +779,10 @@ spec:
             - --allow-empty-cloud-config=true
             - --support-zone=true
             - --get-node-info-from-labels=false
+            {{- if semverCompare .Cluster.Version ">= 1.29" }}
             - --get-nodeid-from-imds=false
             - --enable-otel-tracing=false
+            {{- end }}
           env:
             - name: AZURE_CREDENTIAL_FILE
               value: /etc/kubernetes/azure.json
