[release/v2.24] Avoid referring to documentation against main/development branch (#13657)

--- a/charts/monitoring/prometheus/rules/general-kube-apiserver.yaml
+++ b/charts/monitoring/prometheus/rules/general-kube-apiserver.yaml
@@ -38,7 +38,7 @@ groups:
       - alert: KubernetesApiserverDown
         annotations:
           message: KubernetesApiserver has disappeared from Prometheus target discovery.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-kubernetesapiserverdown
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.24/cheat-sheets/alerting-runbook/#alert-kubernetesapiserverdown
         expr: absent(up{job="apiserver"} == 1)
         for: 15m
         labels:
@@ -48,7 +48,7 @@ groups:
       - alert: KubeAPITerminatedRequests
         annotations:
           message: The kubernetes apiserver has terminated {{ $value | humanizePercentage }} of its incoming requests.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-kubeapiterminatedrequests
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.24/cheat-sheets/alerting-runbook/#alert-kubeapiterminatedrequests
         expr: |
           sum(rate(apiserver_request_terminations_total{job="apiserver"}[10m]))
             /
@@ -61,7 +61,7 @@ groups:
       - alert: KubeAPITerminatedRequests
         annotations:
           message: The kubernetes apiserver has terminated {{ $value | humanizePercentage }} of its incoming requests.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-kubeapiterminatedrequests
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.24/cheat-sheets/alerting-runbook/#alert-kubeapiterminatedrequests
         expr: |
           sum(rate(apiserver_request_terminations_total{job="apiserver"}[10m]))
             /
@@ -74,7 +74,7 @@ groups:
       - alert: KubeClientCertificateExpiration
         annotations:
           message: A client certificate used to authenticate to the apiserver is expiring in less than 7 days.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-kubeclientcertificateexpiration
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.24/cheat-sheets/alerting-runbook/#alert-kubeclientcertificateexpiration
         expr: |
           apiserver_client_certificate_expiration_seconds_count{job="apiserver"} > 0
           and
@@ -86,7 +86,7 @@ groups:
       - alert: KubeClientCertificateExpiration
         annotations:
           message: A client certificate used to authenticate to the apiserver is expiring in less than 24 hours.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-kubeclientcertificateexpiration
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.24/cheat-sheets/alerting-runbook/#alert-kubeclientcertificateexpiration
         expr: |
           apiserver_client_certificate_expiration_seconds_count{job="apiserver"} > 0
           and
