--- a/charts/monitoring/prometheus/rules/src/general/blackbox-exporter.yaml
+++ b/charts/monitoring/prometheus/rules/src/general/blackbox-exporter.yaml
@@ -18,7 +18,7 @@ groups:
       - alert: HttpProbeFailed
         annotations:
           message: Probing the blackbox-exporter target {{ $labels.instance }} failed.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-httpprobefailed
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.24/cheat-sheets/alerting-runbook/#alert-httpprobefailed
         expr: probe_success != 1
         for: 5m
         labels:
@@ -29,7 +29,7 @@ groups:
       - alert: HttpProbeSlow
         annotations:
           message: "{{ $labels.instance }} takes {{ $value }} seconds to respond."
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-httpprobeslow
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.24/cheat-sheets/alerting-runbook/#alert-httpprobeslow
         expr: sum by (instance) (probe_http_duration_seconds) > 3
         for: 15m
         labels:
@@ -39,11 +39,11 @@ groups:
         runbook:
           steps:
             - Check the target system's resource usage for anomalias.
-            - Check if the target application has been recently rescheduled and is still settling.    
+            - Check if the target application has been recently rescheduled and is still settling.
       - alert: HttpCertExpiresSoon
         annotations:
           message: The certificate for {{ $labels.instance }} expires in less than 3 days.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-httpcertexpiressoon
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.24/cheat-sheets/alerting-runbook/#alert-httpcertexpiressoon
         expr: probe_ssl_earliest_cert_expiry - time() < 3*24*3600
         labels:
           severity: warning
@@ -52,10 +52,9 @@ groups:
       - alert: HttpCertExpiresVerySoon
         annotations:
           message: The certificate for {{ $labels.instance }} expires in less than 24 hours.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-httpcertexpiresverysoon
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.24/cheat-sheets/alerting-runbook/#alert-httpcertexpiresverysoon
         expr: probe_ssl_earliest_cert_expiry - time() < 24*3600
         labels:
           severity: critical
           resource: "{{ $labels.instance }}"
-          service: blackbox-exporter      
-
+          service: blackbox-exporter
