--- a/charts/monitoring/prometheus/rules/general-node-exporter.yaml
+++ b/charts/monitoring/prometheus/rules/general-node-exporter.yaml
@@ -173,7 +173,7 @@ groups:
       - alert: NodeFilesystemSpaceFillingUp
         annotations:
           message: Filesystem on {{ $labels.device }} at {{ $labels.instance }} is predicted to run out of space within the next 24 hours.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-nodefilesystemspacefillingup
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.25/cheat-sheets/alerting-runbook/#alert-nodefilesystemspacefillingup
         expr: |
           predict_linear(node_filesystem_avail_bytes{app="node-exporter",fstype=~"ext.|xfs"}[6h], 24*60*60) < 0
           and
@@ -188,7 +188,7 @@ groups:
       - alert: NodeFilesystemSpaceFillingUp
         annotations:
           message: Filesystem on {{ $labels.device }} at {{ $labels.instance }} is predicted to run out of space within the next 4 hours.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-nodefilesystemspacefillingup
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.25/cheat-sheets/alerting-runbook/#alert-nodefilesystemspacefillingup
         expr: |
           predict_linear(node_filesystem_avail_bytes{app="node-exporter",fstype=~"ext.|xfs"}[6h], 4*60*60) < 0
           and
@@ -203,7 +203,7 @@ groups:
       - alert: NodeFilesystemOutOfSpace
         annotations:
           message: Filesystem on node {{ $labels.node_name }} having IP {{ $labels.instance }} has only {{ $value }}% available space left on drive {{ $labels.device }}.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-nodefilesystemoutofspace
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.25/cheat-sheets/alerting-runbook/#alert-nodefilesystemoutofspace
         expr: |
           node_filesystem_avail_bytes{app="node-exporter",fstype=~"ext.|xfs"} / node_filesystem_size_bytes{app="node-exporter",fstype=~"ext.|xfs"} * 100 < 10
           and
@@ -216,7 +216,7 @@ groups:
       - alert: NodeFilesystemOutOfSpace
         annotations:
           message: Filesystem on node {{ $labels.node_name }} having IP {{ $labels.instance }} has only {{ $value }}% available space left on drive {{ $labels.device }}.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-nodefilesystemoutofspace
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.25/cheat-sheets/alerting-runbook/#alert-nodefilesystemoutofspace
         expr: |
           node_filesystem_avail_bytes{app="node-exporter",fstype=~"ext.|xfs"} / node_filesystem_size_bytes{app="node-exporter",fstype=~"ext.|xfs"} * 100 < 5
           and
@@ -229,7 +229,7 @@ groups:
       - alert: NodeFilesystemFilesOutOfSpace
         annotations:
           message: Filesystem on node {{ $labels.node_name }} having IP {{ $labels.instance }} has only {{ $value }}% inodes available on drive {{ $labels.device }}.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-nodefilesystemfilesoutofspace
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.25/cheat-sheets/alerting-runbook/#alert-nodefilesystemfilesoutofspace
         expr: |
           node_filesystem_files_free{app="node-exporter",fstype=~"ext.|xfs"} / node_filesystem_files{app="node-exporter",fstype=~"ext.|xfs"} * 100 < 10
           and
@@ -242,7 +242,7 @@ groups:
       - alert: NodeFilesystemFilesFillingUp
         annotations:
           message: Filesystem on {{ $labels.device }} at {{ $labels.instance }} is predicted to run out of files within the next 24 hours.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-nodefilesystemfilesfillingup
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.25/cheat-sheets/alerting-runbook/#alert-nodefilesystemfilesfillingup
         expr: |
           predict_linear(node_filesystem_files_free{app="node-exporter",fstype=~"ext.|xfs"}[6h], 24*60*60) < 0
           and
@@ -257,7 +257,7 @@ groups:
       - alert: NodeFilesystemFilesFillingUp
         annotations:
           message: Filesystem on {{ $labels.device }} at {{ $labels.instance }} is predicted to run out of files within the next 4 hours.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-nodefilesystemfilesfillingup
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.25/cheat-sheets/alerting-runbook/#alert-nodefilesystemfilesfillingup
         expr: |
           predict_linear(node_filesystem_files_free{app="node-exporter",fstype=~"ext.|xfs"}[6h], 4*60*60) < 0
           and
@@ -272,7 +272,7 @@ groups:
       - alert: NodeFilesystemOutOfFiles
         annotations:
           message: Filesystem on {{ $labels.device }} at {{ $labels.instance }} has only {{ $value }}% available inodes left.
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-nodefilesystemoutoffiles
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.25/cheat-sheets/alerting-runbook/#alert-nodefilesystemoutoffiles
         expr: |
           node_filesystem_files_free{app="node-exporter",fstype=~"ext.|xfs"} / node_filesystem_files{app="node-exporter",fstype=~"ext.|xfs"} * 100 < 5
           and
@@ -285,7 +285,7 @@ groups:
       - alert: NodeNetworkReceiveErrs
         annotations:
           message: "{{ $labels.instance }} interface {{ $labels.device }} shows errors while receiving packets ({{ $value }} errors in two minutes)."
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-nodenetworkreceiveerrs
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.25/cheat-sheets/alerting-runbook/#alert-nodenetworkreceiveerrs
         expr: increase(node_network_receive_errs_total[2m]) > 10
         for: 1h
         labels:
@@ -295,7 +295,7 @@ groups:
       - alert: NodeNetworkTransmitErrs
         annotations:
           message: "{{ $labels.instance }} interface {{ $labels.device }} shows errors while transmitting packets ({{ $value }} errors in two minutes)."
-          runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-nodenetworktransmiterrs
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.25/cheat-sheets/alerting-runbook/#alert-nodenetworktransmiterrs
         expr: increase(node_network_transmit_errs_total[2m]) > 10
         for: 1h
         labels:
