--- a/charts/monitoring/prometheus/rules/src/managed/kube-scheduler.yaml
+++ b/charts/monitoring/prometheus/rules/src/managed/kube-scheduler.yaml
@@ -13,23 +13,23 @@
 # limitations under the License.
 
 groups:
-- name: kube-scheduler
-  rules:
-  - record: :ready_kube_schedulers:sum
-    expr: |
-      sum (
-        (sum by (pod) (kube_pod_labels{label_component="kube-scheduler"}))
-        * on (pod)
-        (sum by (pod) (kube_pod_status_ready{condition="true"}))
-      )
+  - name: kube-scheduler
+    rules:
+      - record: :ready_kube_schedulers:sum
+        expr: |
+          sum (
+            (sum by (pod) (kube_pod_labels{label_component="kube-scheduler"}))
+            * on (pod)
+            (sum by (pod) (kube_pod_status_ready{condition="true"}))
+          )
 
-  - alert: KubeSchedulerDown
-    annotations:
-      message: No healthy scheduler pods exist inside the cluster.
-      runbook_url: https://docs.kubermatic.com/kubermatic/main/cheat-sheets/alerting-runbook/#alert-kubeschedulerdown
-    expr: absent(:ready_kube_schedulers:sum) or :ready_kube_schedulers:sum == 0
-    for: 10m
-    labels:
-      severity: critical
-      resource: kube-scheduler
-      service: kubernetes
+      - alert: KubeSchedulerDown
+        annotations:
+          message: No healthy scheduler pods exist inside the cluster.
+          runbook_url: https://docs.kubermatic.com/kubermatic/v2.25/cheat-sheets/alerting-runbook/#alert-kubeschedulerdown
+        expr: absent(:ready_kube_schedulers:sum) or :ready_kube_schedulers:sum == 0
+        for: 10m
+        labels:
+          severity: critical
+          resource: kube-scheduler
+          service: kubernetes
