--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -1217,6 +1217,9 @@ spec:
                         routerID:
                           type: string
                         securityGroups:
+                          description: |-
+                            SecurityGroups is a comma-separated list of group names that shall be used for Machines in the cluster.
+                            If this field is left empty, a single default security group will be created and this field will be filled-in.
                           type: string
                         subnetID:
                           type: string
